feat: create task

--- a/views/layout/application.pug
+++ b/views/layout/application.pug
@@ -18,6 +18,7 @@ html(lang="en")
             a.nav-link(href=urlFor('users'))=t('menu.users')
           if (!currentUser.isGuest)
             a.nav-link(href=urlFor('taskStatuses'))=t('menu.taskStatuses')
+            a.nav-link(href=urlFor('tasks'))=t('menu.tasks')
 
         ul.navbar-nav
           if (!currentUser.isGuest)
