--- a/views/mixins/forms.pug
+++ b/views/mixins/forms.pug
@@ -6,11 +6,28 @@ mixin input(entity, propertyName, label, errors = [])
   - error = errors.find((error) => error.property === propertyName)
   .form-group(class=(errors[propertyName] && 'has-danger'))
     label= label
+
     input(
       name=propertyName
       class='form-control'
       value=_.get(entity, propertyName, '')
     )&attributes(attributes)
+
+    if error
+      .form-control-feedback.text-danger= Object.values(error.constraints).join('. ')
+
+mixin select(entity, items, propertyName, label, errors = [])
+  - error = errors.find((error) => error.property === propertyName)
+  .form-group(class=(errors[propertyName] && 'has-danger'))
+    label= label
+
+    select(
+      name=propertyName
+      class='form-control'
+    )&attributes(attributes)
+      each item in items
+        option(value=item.id) #{item.name}
+
     if error
       .form-control-feedback.text-danger= Object.values(error.constraints).join('. ')
 
