feat: add default status

--- a/views/task-statuses/index.pug
+++ b/views/task-statuses/index.pug
@@ -10,6 +10,7 @@ block title
       .card-body.d-flex.justify-content-between
         div
           div= status.name
+            = status.isDefault ? `: ${ t('entity.TaskStatus.attributes.isDefault') }` : ''
         div.d-flex
           a.btn.btn-success.btn-sm.mr-1(href=urlFor('editTaskStatus', { id: status.id }))= t('taskStatuses.index.edit')
           +buttonTo(urlFor('removeTaskStatus', { id: status.id }), 'delete')(class="btn btn-danger btn-sm" value=t('taskStatuses.index.delete'))
