--- a/views/task-statuses/edit.pug
+++ b/views/task-statuses/edit.pug
@@ -6,5 +6,7 @@ block title
 block content
   +formFor()(action=urlFor('updateTaskStatus', { id: taskStatus.id }) method='post')
     +input(taskStatus, 'name', t('entity.TaskStatus.attributes.name'), errors)
+    +checkbox(taskStatus, 'isDefault', t('entity.TaskStatus.attributes.isDefault'), errors)
     input(type="hidden" name="_method" value="patch")
+
     +submit(taskStatus)(value=t('taskStatuses.edit.form.submit'))
