--- a/views/task-statuses/index.pug
+++ b/views/task-statuses/index.pug
@@ -13,4 +13,10 @@ block title
             = status.isDefault ? `: ${ t('entity.TaskStatus.attributes.isDefault') }` : ''
         div.d-flex
           a.btn.btn-success.btn-sm.mr-1(href=urlFor('editTaskStatus', { id: status.id }))= t('taskStatuses.index.edit')
-          +buttonTo(urlFor('removeTaskStatus', { id: status.id }), 'delete')(class="btn btn-danger btn-sm" value=t('taskStatuses.index.delete'))
+          a(
+            class="btn btn-danger btn-sm"
+            href=urlFor('removeTaskStatus', { id: status.id }),
+            data-confirm= t('common.areYouSure'),
+            data-method="delete",
+            rel="nofollow"
+           )= t('taskStatuses.index.delete')
