--- a/views/tasks/index.pug
+++ b/views/tasks/index.pug
@@ -47,4 +47,10 @@ block title
         .card-footer
           div.d-flex
             a.btn.btn-success.btn-sm.mr-1(href=urlFor('editTask', { id: task.id }))= t('tasks.index.edit')
-            +buttonTo(urlFor('deleteTask', { id: task.id }), 'delete')(class="btn btn-danger btn-sm" value=t('tasks.index.delete'))
+            a(
+              class="btn btn-danger btn-sm"
+              href=urlFor('deleteTask', { id: task.id }),
+              data-confirm= t('common.areYouSure'),
+              data-method="delete",
+              rel="nofollow"
+             )= t('tasks.index.delete')
