--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -26,4 +26,10 @@ block title
           div.d-flex
             div
               a.btn.btn-success.btn-sm.mr-1(href=urlFor('editUser', { id: user.id }))= t('users.index.edit')
-            +buttonTo(urlFor('deleteUser', { id: user.id }), 'delete')(class="btn btn-danger btn-sm" value=t('users.index.delete'))
+              a(
+                class="btn btn-danger btn-sm"
+                href=urlFor('deleteUser', { id: user.id }),
+                data-confirm= t('common.areYouSure'),
+                data-method="delete",
+                rel="nofollow"
+               )= t('users.index.delete')
