--- a/views/tasks/show.pug
+++ b/views/tasks/show.pug
@@ -12,7 +12,7 @@ block title
     li.list-group-item.d-flex
       strong.mr-1= t('entity.Task.attributes.creator')
         =':'
-      = task.creator.fullName
+      = task.creator.toString()
 
     li.list-group-item
       strong.mr-1= t('entity.Task.attributes.status')
@@ -22,7 +22,7 @@ block title
     li.list-group-item
       strong.mr-1= t('entity.Task.attributes.assignedTo')
         =':'
-      = task.assignedTo ? task.assignedTo.fullName : '-'
+      = task.assignedTo ? task.assignedTo.toString() : '-'
 
     li.list-group-item
       strong.mr-1= t('entity.Task.attributes.tags')
