--- a/views/layout/application.pug
+++ b/views/layout/application.pug
@@ -8,32 +8,7 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     script(src='/assets/main.js')
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3
-      a.navbar-brand(href="/")=t('menu.brand')
-      button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
-        span.navbar-toggler-icon
-      .collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href=urlFor('users'))=t('menu.users')
-          if (!currentUser.isGuest)
-            a.nav-link(href=urlFor('taskStatuses'))=t('menu.taskStatuses')
-            a.nav-link(href=urlFor('tasks'))=t('menu.tasks')
-
-        ul.navbar-nav
-          if (!currentUser.isGuest)
-            li.nav-item
-              a(
-                class="btn nav-link"
-                href=urlFor('session'),
-                data-method="delete",
-                rel="nofollow"
-               )= t('menu.signOut', currentUser)
-          else
-            li.nav-item
-              a.nav-link(href=urlFor('signIn'))=t('sessions.new.title')
-            li.nav-item
-              a.nav-link(href=urlFor('newUser'))=t('users.new.title')
+    include _menu
     .container
       - const msg = flash.get()
       if msg
@@ -45,4 +20,4 @@ html(lang="en")
 
       block content
 
-      include ./paginate
+      include _paginate
